# qt_mongo

./: CMakeLists.txt  main.cpp
